fix: fix content showing on mobile screen

--- a/components/ShowCasesV2/showcasesv2.module.css
+++ b/components/ShowCasesV2/showcasesv2.module.css
@@ -241,7 +241,7 @@
   }
   
   .slidesViewport {
-    min-height: auto;
+    min-height: 60vh;
   }
   
   .imageContainer {
